@@ -1,3 +1,7 @@
+Sun Aug 31 18:17:14 BST 2008  Colin Watson  <cjwatson@debian.org>
+
+	* gnulib: Upgrade to 20080801.
+
 Sun Aug 17 16:42:43 BST 2008  Colin Watson  <cjwatson@debian.org>
 
 	* src/accessdb.c (main), src/catman.c (main), src/globbing_test.c
